# AISum-Teamspeak

./: .gitignore  README.en.md  README.md
backend/: .dockerignore  .env.example  Dockerfile.tsai  Dockerfile.tsserver  Plan.md  Program.cs  TsAi.csproj  appsettings.json  dashscope_stt.py  docker-compose.yml
backend/Components/: App.razor  _Imports.razor
backend/Components/Layout/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor
backend/Components/Pages/: Channel.razor  Home.razor
backend/Models/: AiSummary.cs  ChatMessage.cs  GameSession.cs  TsChannel.cs  TsClient.cs  VoicePacket.cs
backend/Properties/: launchSettings.json
backend/Services/: AiRuntimeOptions.cs  AiSttService.cs  AzureSttService.cs  ByteDanceAiService.cs  ChatHistoryStore.cs  ChatSessionManager.cs  ClientRegistry.cs  CurrentUser.cs  TsApiClient.cs  UserMappingService.cs  VoiceReceiver.cs
backend/wwwroot/: app.css
ts_plugin/: README.md  build.sh  plugin.c
ts_plugin/cmake/: CMakeLists.txt  toolchain-mingw64.cmake
ts_plugin/install/: install_plugin.bat  install_plugin.ps1
